Fix header and footer alignment

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 32px;
+    padding: 32px 0;
     margin-bottom: 72px;
 }
 
